[gd_scene load_steps=6 format=3]

[ext_resource type="Script" path="res://scripts/ui/HUD.gd" id="1_script"]
[ext_resource type="PackedScene" path="res://scenes/ui/PauseMenu.tscn" id="2_pause_menu"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xp_bg"]
bg_color = Color(0.2, 0.2, 0.2, 1)
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xp_fill"]
bg_color = Color(0.2, 0.6, 1, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hp_bg"]
bg_color = Color(0.3, 0.1, 0.1, 1)
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hp_fill"]
bg_color = Color(0.9, 0.2, 0.2, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_script")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ItemIndicators" type="Control" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 240.0
grow_horizontal = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="XPBar" type="ProgressBar" parent="Control/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
show_percentage = false
theme_override_styles/background = SubResource("StyleBoxFlat_xp_bg")
theme_override_styles/fill = SubResource("StyleBoxFlat_xp_fill")

[node name="LevelLabel" type="Label" parent="Control/MarginContainer/VBoxContainer/XPBar"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -11.5
offset_right = 40.0
offset_bottom = 11.5
grow_vertical = 2
text = "LV 1"

[node name="SecondRow" type="Control" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 104)

[node name="InventoryBox" type="VBoxContainer" parent="Control/MarginContainer/VBoxContainer/SecondRow"]
layout_mode = 1
anchors_preset = 0
offset_left = 0.0
offset_top = 0.0
offset_right = 220.0
offset_bottom = 104.0
theme_override_constants/separation = 6

[node name="WeaponsIcons" type="HBoxContainer" parent="Control/MarginContainer/VBoxContainer/SecondRow/InventoryBox"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="WIcon1" type="TextureRect" parent="Control/MarginContainer/VBoxContainer/SecondRow/InventoryBox/WeaponsIcons"]
custom_minimum_size = Vector2(48, 48)
stretch_mode = 4

[node name="WIcon2" type="TextureRect" parent="Control/MarginContainer/VBoxContainer/SecondRow/InventoryBox/WeaponsIcons"]
custom_minimum_size = Vector2(48, 48)
stretch_mode = 4

[node name="WIcon3" type="TextureRect" parent="Control/MarginContainer/VBoxContainer/SecondRow/InventoryBox/WeaponsIcons"]
custom_minimum_size = Vector2(48, 48)
stretch_mode = 4

[node name="WIcon4" type="TextureRect" parent="Control/MarginContainer/VBoxContainer/SecondRow/InventoryBox/WeaponsIcons"]
custom_minimum_size = Vector2(48, 48)
stretch_mode = 4

[node name="SpecialsIcons" type="HBoxContainer" parent="Control/MarginContainer/VBoxContainer/SecondRow/InventoryBox"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="SIcon1" type="TextureRect" parent="Control/MarginContainer/VBoxContainer/SecondRow/InventoryBox/SpecialsIcons"]
custom_minimum_size = Vector2(48, 48)
stretch_mode = 4

[node name="SIcon2" type="TextureRect" parent="Control/MarginContainer/VBoxContainer/SecondRow/InventoryBox/SpecialsIcons"]
custom_minimum_size = Vector2(48, 48)
stretch_mode = 4

[node name="SIcon3" type="TextureRect" parent="Control/MarginContainer/VBoxContainer/SecondRow/InventoryBox/SpecialsIcons"]
custom_minimum_size = Vector2(48, 48)
stretch_mode = 4

[node name="SIcon4" type="TextureRect" parent="Control/MarginContainer/VBoxContainer/SecondRow/InventoryBox/SpecialsIcons"]
custom_minimum_size = Vector2(48, 48)
stretch_mode = 4

[node name="TimeLabel" type="Label" parent="Control/MarginContainer/VBoxContainer/SecondRow"]
custom_minimum_size = Vector2(120, 24)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.0
offset_top = -12.0
offset_right = 60.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
text = "00:00"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 28

[node name="PauseButton" type="Button" parent="Control/MarginContainer/VBoxContainer/SecondRow"]
layout_mode = 1
anchors_preset = 5
anchor_left = 1.0
anchor_right = 1.0
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -60.0
offset_top = -24.0
offset_right = 0.0
offset_bottom = 24.0
grow_vertical = 2
custom_minimum_size = Vector2(60, 48)
text = "‚è∏"

[node name="TopRow" type="HBoxContainer" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
visible = false

[node name="LoadoutLabel" type="Label" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "W: - - - -\nS: - - - -"
visible = false

[node name="HPContainer" type="HBoxContainer" parent="Control/MarginContainer/VBoxContainer/TopRow"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HPBar" type="ProgressBar" parent="Control/MarginContainer/VBoxContainer/TopRow/HPContainer"]
custom_minimum_size = Vector2(200, 20)
layout_mode = 2
value = 100.0
show_percentage = false
theme_override_styles/background = SubResource("StyleBoxFlat_hp_bg")
theme_override_styles/fill = SubResource("StyleBoxFlat_hp_fill")

[node name="HPLabel" type="Label" parent="Control/MarginContainer/VBoxContainer/TopRow/HPContainer"]
layout_mode = 2
text = "100 / 100"

[node name="ShieldLabel" type="Label" parent="Control/MarginContainer/VBoxContainer/TopRow/HPContainer"]
layout_mode = 2
text = "üõ° x0"

[node name="PauseMenu" parent="." instance=ExtResource("2_pause_menu")]
visible = false
